# cesiumtiles-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/models/: mod.rs  styling.rs  subtree.rs  tileset.rs
src/models/gltf_extensions/gltf/: ext_structural_metadata.rs  mod.rs
src/models/gltf_extensions/mesh/: mod.rs
tests/: gltf_extensions.rs  load_json.rs
tests/samples/: README.md
