[package]
name = "cesiumtiles"
edition = "2021"
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
license = "MIT"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["indexmap", "float_roundtrip"] }
serde_repr = "0.1.18"

[dev-dependencies]
glob = "0.3.1"
