[package]
authors = ["MIERUNE Inc. <info@mierune.co.jp>", "Re:Earth Flow Contributors"]
edition = "2024"
license = "MIT"
name = "cesiumtiles"
description = "3D Tiles 1.1 - JSON model"
publish = true
version = "0.0.1"
repository = "https://github.com/MIERUNE/cesiumtiles-rs"

[dependencies]
indexmap = { version = "2.8.0", features = ["rayon", "serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["float_roundtrip", "indexmap"] }
serde_repr = "0.1.19"

[dev-dependencies]
glob = "0.3.1"
